<resources>
    <string name="app_name">InstagramCLone</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
    <string name="signg_up">Signg up</string>
    <string name="email">email</string>
    <string name="instagram">Instagram</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="home_button">home button</string>
    <string name="post_button">post button</string>
    <string name="profile_button">profile button</string>
    <string name="logout_button">logout button</string>
    <string name="button">Button</string>
    <string name="log_out">Log Out</string>
    <string name="description">Description</string>
    <string name="image">Image</string>
    <string name="textview">TextView</string>
</resources>
