<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".LoginActivity">


    <android.support.design.widget.TextInputEditText
        android:id="@+id/unText"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:hint="@string/username" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/pwInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/BtnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <Button
        android:id="@+id/BtnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signg_up" />

</LinearLayout>